# AllTaskFromTUL

./: .gitattributes  .gitignore  .gitmodules  LICENSE.md  README.md
TUL/20192020/MTLB/: cv5u3b.fig  cviceni1.m  cviceni2.m  cviceni3.m  cviceni4.m  cviceni5.m  cviceni6.m  cviceni7.m  cviceni8.m  cviceni9.m  functionCv5.m  sinsincos.m
TUL/20192020/OA1/: .gitattributes  ARVR.key  ARVR.pptx  Device for handicapped people.pages  IoT.pages
TUL/20192020/PST/: Kalosha -  03.pages  Kalosha - 03  Kalosha-08.pages  kalosha-01.pages  kalosha-05.pages
TUL/20192020/SEM/: BisectionMethod.m  Morphism.m  Newton.m  Regrese.m  Taylor.m  derivace.m  functionS.m  integral.m  integralVec.m  polynom.m  s20191119.m  s20191126.m  s20191210.m  showTaylor.m
TUL/20192020/SEM2/: EulerovaMetoda.m  bisekce.m  metodaSiti.m  newtonPriblResRovnic.m  numVypDeriv.m  numVypInt.m  prevodCiselBinarni.m
TUL/20202021/ALD/: zkouska.docx  zkouska.pages
TUL/20202021/DBS/: zapocet.sql
TUL/20202021/OA2/: CoverLetter.docx  (+15 more)
TUL/20212022/PG2/PG2Game/: CMakeLists.txt  main.cpp
TUL/20212022/PG2/PG2Game/DataLoader/: OBJloader.cpp  mesh.h  texture.cpp  texture.h
TUL/20212022/PG2/PG2Game/GL/: Mesh.h  Vertex.h  glInfo.h  glInit.h  glerror.h  shape.h
TUL/20212022/PG2/PG2Game/Game/: Config.h  Game.h  MeshRenderer.h
TUL/20212022/PG2/PG2Game/Game/Avatars/: Actor.h  Avatar.h  Camera.h  Light.h  Player.h  SceneObject.h
TUL/20212022/PG2/PG2Game/Game/Data/: LightData.h  SpriteData.h
TUL/20212022/PG2/PG2Game/Game/Renderer/: ActorRenderer.h  LightRenderer.h  MeshRenderer.h
TUL/20212022/PG2/PG2Game/resources/map/: lvl01.txt
TUL/20212022/PG2/PG2Game/resources/shader/: basic.frag  cube.frag  cube.vert  light.vert  texture.frag  texture.vert  textureBilboard.frag  textureBilboard.vert
TUL/20212022/PG2/cv01/: CMakeLists.txt  glInfo.h  main.cpp
TUL/20212022/PG2/cv03/: CMakeLists.txt  glInit.h  main.cpp  shape.h
TUL/20212022/PG2/cv03/shader/: basic.vert
TUL/20212022/PG2/cv05/: CMakeLists.txt  Game.h  glerror.h  input.h  main.cpp
TUL/20212022/PG2/cv05/Avatars/: Avatar.h  Player.h
TUL/20212022/PG2/cv05/DataLoader/: OBJloader.h  mesh.cpp  texture.cpp  texture.h
TUL/20212022/PG2/cv05/GL/: Mesh.h  glInit.h  input.h  shape.h
TUL/20212022/PG2/cv05/Game/: Game.h  MeshRenderer.h
TUL/20212022/PG2/cv05/Game/Avatars/: Avatar.h  Camera.h  Player.h  SceneObject.h
(+1867 files in other folders)
